Reorganize side nav (#428)
* Refactor navigation data structure to be more dynamic.
* Reorganize routes into role-based categories.
* Reorganize sidenav items. Delete sandboxes.
* Humanize page titles.
* Add stack trace information to EuiErrorBoundary.

--- a/src/components/error_boundary/_error_boundary.scss
+++ b/src/components/error_boundary/_error_boundary.scss
@@ -17,3 +17,7 @@
     background-color: $euiColorEmptyShade;
     padding: $euiSizeS;
   }
+
+  .euiErrorBoundary__stack {
+    white-space: pre-wrap;
+  }
