Side nav items only behave clickable if they are (#434)

--- a/src/components/side_nav/_side_nav_item.scss
+++ b/src/components/side_nav/_side_nav_item.scss
@@ -10,14 +10,16 @@
   padding: $euiSizeXS / 2 0;
   color: $euiColorFullShade; /* 2 */
 
-  &:hover {
-    text-decoration: underline;
-  }
+  &.euiSideNavItemButton--isClickable {
+    &:hover {
+      text-decoration: underline;
+    }
 
-  // Focus state background regardless of index/selected state.
-  &:focus {
-    background-color: $euiFocusBackgroundColor !important;
-    color: $euiColorPrimary !important;
+    // Focus state background regardless of index/selected state.
+    &:focus {
+      background-color: $euiFocusBackgroundColor !important;
+      color: $euiColorPrimary !important;
+    }
   }
 
   &.euiSideNavItemButton-isOpen {
