Button and toast guidelines (#371)
Guidelines for buttons and toasts.

--- a/src-docs/src/components/guide_rule/_guide_rule_example.scss
+++ b/src-docs/src/components/guide_rule/_guide_rule_example.scss
@@ -40,4 +40,14 @@
       color: $euiColorDanger;
     }
   }
+
+  &.guideRule__example--frame {
+    .guideRule__example__panel {
+      padding: $euiSizeL;
+      background-color: $euiColorLightestShade;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+    }
+  }
 }
