Refactor EuiToolTip, add EuiPortal (#484)
Adds `EuiToolTip` and `EuiPortal` components.

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -44,5 +44,5 @@
 @import 'tabs/index';
 @import 'title/index';
 @import 'toast/index';
-@import 'tooltip/index';
+@import 'tool_tip/index';
 @import 'text/index';
