Docs homepage rework, colors guideline + misc fixes (#494)
Adds a new homepage to EUI along with a colors guideline page. Misc. small fixes for components and the addition of two new color service functions.

--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -150,6 +150,8 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
   }
 }
 
+
+@import "../views/guidelines/index";
 @import "guide_section/index";
 @import "guide_rule/index";
 
