--- a/src/global_styling/variables/_colors.scss
+++ b/src/global_styling/variables/_colors.scss
@@ -29,7 +29,7 @@
 // Core
 
 $euiColorPrimary: #0079a5 !default;
-$euiColorSecondary: #00A69B !default;
+$euiColorSecondary: #017F75 !default;
 $euiColorAccent: #DD0A73 !default;
 $euiColorHighlight: #FFFBF1 !default;
 $euiColorGhost: #FFF !default;
@@ -37,7 +37,7 @@ $euiColorGhost: #FFF !default;
 // Status
 $euiColorSuccess: $euiColorSecondary !default;
 $euiColorDanger: #A30000 !default;
-$euiColorWarning: #E5830E !default;
+$euiColorWarning: #CF3800 !default;
 
 // Grays
 $euiColorEmptyShade: #FFF !default;
