Fix FlexGrid responsiveness (#513)
* fix responsiveness of flexgrid
* fix home icons
* use node instead of string for `EuiCard` propTypes

--- a/src/components/flex/_flex_item.scss
+++ b/src/components/flex/_flex_item.scss
@@ -23,7 +23,8 @@
 
 // On mobile we force them to stack and act the same.
 @include screenXSmall {
-  .euiFlexGroup--responsive > .euiFlexItem {
+  .euiFlexGroup--responsive > .euiFlexItem,
+  .euiFlexGrid > .euiFlexItem {
     width: 100% !important;
     flex-basis: 100% !important;
     margin-left: 0 !important;
