Fix EuiPageContent centering (#527)
This fixes a very old bug introduced when EuiPanel took on flex abilities based upon if it was placed in a flex item. That change broke a couple instances of positioning in EuiPage, where panels nest inside of flex layouts.

This change sets the grow to 0 for EuiPageCOntent, which itself is an EuiPanel. The specificity is changed so we don't need to resort to !important tags.

--- a/src/components/page/page_content/_page_content.scss
+++ b/src/components/page/page_content/_page_content.scss
@@ -1,15 +1,17 @@
 .euiPageContent {
   width: 100%;
+
+  &.euiPageContent--verticalCenter {
+    align-self: center;
+  }
+
+  &.euiPageContent--horizontalCenter {
+    width: auto;
+    margin: auto;
+    flex-grow: 0; // Offsets the properties of .euiPanel within flexboxes
+  }
 }
 
-.euiPageContent--verticalCenter {
-  align-self: center;
-}
-
-.euiPageContent--horizontalCenter {
-  width: auto;
-  margin: auto;
-}
 
 @include screenXSmall {
   .euiPageContent {
