Add ability to force open EuiSideNav items. (#515)

--- a/src/components/side_nav/_side_nav_item.scss
+++ b/src/components/side_nav/_side_nav_item.scss
@@ -22,12 +22,6 @@
     }
   }
 
-  &.euiSideNavItemButton-isOpen {
-    .euiSideNavItemButton__label {
-      color: $euiColorFullShade;
-    }
-  }
-
   &.euiSideNavItemButton-isSelected {
     .euiSideNavItemButton__label {
       color: $euiColorPrimary;
@@ -159,5 +153,13 @@
 
   & > .euiSideNavItem__items {
     margin-left: $euiSize;
+  }
+}
+
+.euiSideNavItem--hasChildItems {
+  & > .euiSideNavItemButton-isOpen {
+    .euiSideNavItemButton__label {
+      color: $euiColorFullShade;
+    }
   }
 }
