Using the same `--inList` styles for checkboxes and radios without labels (#542)

--- a/src/components/form/checkbox/_checkbox.scss
+++ b/src/components/form/checkbox/_checkbox.scss
@@ -72,7 +72,8 @@
    *    they actually click this input.
    */
 
-  &.euiCheckbox--inList {
+  &.euiCheckbox--inList,
+  &.euiCheckbox--noLabel {
     min-height: $euiCheckBoxSize;
     min-width: $euiCheckBoxSize;
 
