--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -85,15 +85,21 @@ $buttonTypes: (
 }
 
 .euiButtonEmpty--flushLeft {
+  margin-right: $euiSizeS;
+
   .euiButtonEmpty__content {
     border-left: none;
     padding-left: 0;
+    padding-right: 0;
   }
 }
 
 .euiButtonEmpty--flushRight {
+  margin-left: $euiSizeS;
+
   .euiButtonEmpty__content {
     border-right: none;
+    padding-left: 0;
     padding-right: 0;
   }
 }
