--- a/src/components/flex/_flex_group.scss
+++ b/src/components/flex/_flex_group.scss
@@ -69,6 +69,11 @@ $gutterTypes: (
   align-items: flex-end;
 }
 
+.euiFlexGroup--alignItemsBaseline {
+  align-items: baseline;
+}
+
+// Wrap
 .euiFlexGroup--wrap {
   flex-wrap: wrap;
 }
