--- a/src/components/header/_index.scss
+++ b/src/components/header/_index.scss
@@ -11,6 +11,7 @@ $euiHeaderChildSize: $euiSizeXXL + $euiSizeL;
 @import 'header_popover';
 @import 'header_profile';
 @import 'header_logo';
+@import 'header_notification';
 @import 'header_alert/index';
 @import 'header_breadcrumbs/index';
 @import 'header_section/index';
