--- a/src/components/flyout/_flyout_header.scss
+++ b/src/components/flyout/_flyout_header.scss
@@ -2,6 +2,5 @@
   flex-grow: 0;
   padding: $euiSizeL;
   padding-bottom: 0;
-  box-shadow: 0 $euiSize $euiSize (-$euiSize / 2) $euiColorEmptyShade;
-  z-index: 2;
+  @include euiOverflowShadowBottom;
 }
