--- a/src/components/overlay_mask/_overlay_mask.scss
+++ b/src/components/overlay_mask/_overlay_mask.scss
@@ -6,11 +6,18 @@
   right: 0;
   bottom: 0;
   display: flex;
-  background: transparentize($euiColorEmptyShade, .2);
   align-items: center;
   justify-content: center;
   padding-bottom: 10vh;
   animation: euiAnimFadeIn $euiAnimSpeedFast ease-in;
+
+  $backgroundColor: $euiColorEmptyShade;
+
+  @if (lightness($euiTextColor) > 50) {
+    $backgroundColor: $euiColorLightShade;
+  }
+
+  background: transparentize($backgroundColor, .2);
 }
 
 .euiBody-hasOverlayMask {
