--- a/src/global_styling/mixins/_shadow.scss
+++ b/src/global_styling/mixins/_shadow.scss
@@ -24,3 +24,13 @@
   box-shadow:
     0 1px 1px 0px rgba(0, 0, 0, 0.2),
 }
+
+@mixin euiOverflowShadowTop {
+  box-shadow: 0 ($euiSize *-1) $euiSize (-$euiSize / 2) $euiColorEmptyShade;
+  z-index: 2;
+}
+
+@mixin euiOverflowShadowBottom {
+  box-shadow: 0 $euiSize $euiSize (-$euiSize / 2) $euiColorEmptyShade;
+  z-index: 2;
+}
