Fixed a bug with `EuiButtonEmpty` disabled state (#561)
* cleaner design for hover empty button no bg

* Updated changelog

--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -45,8 +45,11 @@
       fill: $euiButtonColorDisabled;
     }
 
+    &:focus {
+      background-color: transparent;
+    }
+
     &:hover, &:focus {
-      background-color: $euiColorEmptyShade;
       text-decoration: none;
     }
   }
@@ -75,8 +78,6 @@ $buttonTypes: (
     }
 
     &:hover {
-      background-color: transparent;
-
       @if ($name == 'disabled') {
         cursor: not-allowed;
       }
