Adjust hue for warning callouts specifically (#563)
* adjust hue for callouts specifically

--- a/src/components/call_out/_call_out.scss
+++ b/src/components/call_out/_call_out.scss
@@ -11,7 +11,7 @@
 $callOutTypes: (
   primary: $euiColorPrimary,
   success: $euiColorSecondary,
-  warning: $euiColorWarning,
+  warning: adjust-hue($euiColorWarning, 20%),
   danger: $euiColorDanger,
 );
 
