--- a/src/themes/eui/eui_colors_dark.scss
+++ b/src/themes/eui/eui_colors_dark.scss
@@ -8,6 +8,7 @@ $euiColorDarkShade: #D9D9D9;
 $euiColorDarkestShade: #F5F5F5;
 $euiColorFullShade: #FFF;
 $euiColorPrimary: #4da1c0;
+$euiColorWarning: #e45c29;
 $euiColorDanger: #bf4d4d;
 $euiTextColor: #DDD;
 
