Change EuiBasicTable to support explicitly setting truncateText and textOnly on column definitions, and support passing through unrecognized props to the cell. (#565)
- Update CSS so that long single-word cell content will break and wrap mid-word.

--- a/src/components/table/_table.scss
+++ b/src/components/table/_table.scss
@@ -104,9 +104,14 @@
   padding: $euiSizeS; /* 2 */
 }
 
+  /**
+   * 1. Prevent very long single words (e.g. the name of a field in a document) from overflowing
+   *    the cell.
+   */
   .euiTableCellContent__text {
     min-width: 0;
     text-overflow: ellipsis;
+    word-break: break-word; /* 1 */
   }
 
 .euiTableCellContent--alignRight {
@@ -128,8 +133,13 @@
 .euiTableCellContent--overflowingContent {
   overflow: visible;
   white-space: normal;
+  word-break: break-word;
 
+  /**
+   * 1. Prevent very long single words (e.g. the name of a field in a document) from overflowing
+   *    the cell.
+   */
   .euiTableCellContent__text {
-    overflow: visible;
+    overflow: visible; /* 1 */
   }
 }
