--- a/src-docs/src/components/guide_rule/_guide_rule_description.scss
+++ b/src-docs/src/components/guide_rule/_guide_rule_description.scss
@@ -1,5 +1,5 @@
 .guideRule__description {
-  margin-top: $euiSizeXL;
   margin-bottom: $euiSizeXL;
-  max-width: 36rem;
+
+  @extend .guideSection__text;
 }
