--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -13,6 +13,7 @@
 @import 'code/index';
 @import 'code_editor/index';
 @import 'color_picker/index';
+@import 'combo_box/index';
 @import 'context_menu/index';
 @import 'description_list/index';
 @import 'error_boundary/index';
@@ -35,6 +36,7 @@
 @import 'pagination/index';
 @import 'panel/index';
 @import 'popover/index';
+@import 'portal/index';
 @import 'progress/index';
 @import 'search_bar/index';
 @import 'side_nav/index';
