--- a/src/global_styling/variables/_z_index.scss
+++ b/src/global_styling/variables/_z_index.scss
@@ -16,4 +16,5 @@ $euiZContentMenu:     $euiZLevel2;
 $euiZNavigation:      $euiZLevel4;
 $euiZMask:            $euiZLevel6;
 $euiZModal:           $euiZLevel8;
+$euiZComboBox:        $euiZModal + 10;
 $euiZToastList:       $euiZLevel9;
