--- a/src/components/key_pad_menu/_key_pad_menu.scss
+++ b/src/components/key_pad_menu/_key_pad_menu.scss
@@ -28,6 +28,7 @@
 
   &:hover, &:focus {
     border-color: $euiBorderColor;
+    @include euiSlightShadowHover;
 
     .euiKeyPadMenuItem__icon {
       transform: translateY(0);
