--- a/src/global_styling/variables/_colors.scss
+++ b/src/global_styling/variables/_colors.scss
@@ -47,6 +47,7 @@ $euiColorMediumShade: #999 !default;
 $euiColorDarkShade: #666 !default;
 $euiColorDarkestShade: #3F3F3F !default;
 $euiColorFullShade: #000 !default;
+$euiColorSlightHue: #909AA1 !default;
 
 // Every color below must be based mathmatically on the set above.
 
