--- a/src/themes/eui/eui_colors_dark.scss
+++ b/src/themes/eui/eui_colors_dark.scss
@@ -7,12 +7,17 @@ $euiColorMediumShade: #444;
 $euiColorDarkShade: #D9D9D9;
 $euiColorDarkestShade: #F5F5F5;
 $euiColorFullShade: #FFF;
+$euiColorSlightHue: #494E51;
 $euiColorPrimary: #4da1c0;
 $euiColorWarning: #e45c29;
 $euiColorDanger: #bf4d4d;
 $euiTextColor: #DDD;
 
 $euiFocusBackgroundColor: #191919;
+$euiShadowColor: #000;
+$euiShadowColorLarge: #000;
+$euiModalBorderColor: $euiColorLightShade;
+$euiFlyoutBorderColor: $euiColorLightShade;
 
 // Code
 
