--- a/src/themes/k6/k6_colors_dark.scss
+++ b/src/themes/k6/k6_colors_dark.scss
@@ -12,6 +12,10 @@ $euiColorDanger: #bf4d4d;
 $euiTextColor: #DDD;
 
 $euiFocusBackgroundColor: #191919;
+$euiShadowColor: #000;
+$euiShadowColorLarge: #000;
+$euiModalBorderColor: $euiColorLightShade;
+$euiFlyoutBorderColor: $euiColorLightShade;
 
 // Code
 
