--- a/src/components/flyout/_flyout.scss
+++ b/src/components/flyout/_flyout.scss
@@ -1,16 +1,18 @@
+$euiFlyoutBorderColor: tintOrShade($euiShadowColorLarge, 50%, 0%) !default; // match shadow
+
 .euiFlyout {
+  @include euiBottomShadowLarge;
   position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
-  border-left: $euiBorderThin;
+  border-left: 1px solid $euiFlyoutBorderColor;
   z-index: $euiZModal;
   background: $euiColorEmptyShade;
   animation: euiFlyout $euiAnimSpeedNormal $euiAnimSlightResistance;
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  box-shadow: -$euiSizeS $euiSizeXS $euiSizeM 0px rgba(0,0,0,.05);
 }
 
 /**
