--- a/src/components/panel/_variables.scss
+++ b/src/components/panel/_variables.scss
@@ -7,3 +7,5 @@ $euiPanelPaddingModifiers: (
   "paddingMedium": $euiSize,
   "paddingLarge": $euiSizeL
 ) !default;
+
+$euiPanelBorderColor: tintOrShade($euiShadowColor, 40%, 0%) !default; // match shadow
