--- a/src/components/steps/_steps_horizontal.scss
+++ b/src/components/steps/_steps_horizontal.scss
@@ -78,6 +78,7 @@
   @include createStepsNumber;
   position: relative; /* 2 */
   z-index: $euiZLevel1; /* 2 */
+  transition: all $euiAnimSpeedFast ease-in-out;
 
   // if it contains an icon, it needs to shift up a couple px
   > .euiIcon {
@@ -121,7 +122,7 @@
 // Selected state
 .euiStepHorizontal-isSelected {
   .euiStepHorizontal__number {
-    @include euiBottomShadowMedium;
+    @include euiSlightShadow(desaturate($euiColorPrimary, 20%));
   }
 
   &::before {
