--- a/src/components/toast/_toast.scss
+++ b/src/components/toast/_toast.scss
@@ -1,10 +1,13 @@
 .euiToast {
-  @include euiBottomShadow;
+  @include euiBottomShadowLarge;
 
   position: relative;
   padding: $euiSize;
   background-color: $euiColorEmptyShade;
   border: $euiBorderThin;
+  @if (lightness($euiTextColor) < 50) {
+    border-bottom-color: rgba($euiShadowColor, .6);
+  }
   width: 100%;
 
   &:hover .euiToast__closeButton,
