--- a/src/global_styling/mixins/_shadow.scss
+++ b/src/global_styling/mixins/_shadow.scss
@@ -1,28 +1,50 @@
-@mixin euiBottomShadow {
-  box-shadow: 0 16px 16px -8px rgba(0, 0, 0, 0.1);
+$euiShadowColor: $euiColorMediumShade !default;
+$euiShadowColorLarge: $euiColorSlightHue !default;
+
+
+@mixin euiSlightShadow($color: $euiShadowColor, $opacity: .3) {
+  box-shadow: 0 2px 2px -1px rgba($color, $opacity);
 }
 
-@mixin euiBottomShadowSmall {
-  box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.1);
-}
-
-@mixin euiBottomShadowMedium {
-  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.2);
-}
-
-@mixin euiSlightShadow {
+@mixin euiBottomShadowSmall($color: $euiShadowColor, $opacity: .3) {
   box-shadow:
-    0 2px 2px -1px rgba(0, 0, 0, 0.15),
+    0 2px 2px -1px rgba($color, $opacity),
+    0 1px 5px -2px rgba($color, $opacity);
 }
 
-@mixin euiSlightShadowHover {
+@mixin euiBottomShadowMedium($color: $euiShadowColor, $opacity: .2) {
   box-shadow:
-    0 4px 4px -2px rgba(0, 0, 0, 0.1),
+    0 6px 12px -1px rgba($color, $opacity),
+    0 4px 4px -1px rgba($color, $opacity),
+    0 2px 2px 0 rgba($color, $opacity);
 }
 
-@mixin euiSlightShadowActive {
+@mixin euiBottomShadow($color: $euiShadowColor, $opacity: .2) {
   box-shadow:
-    0 1px 1px 0px rgba(0, 0, 0, 0.2),
+    0 12px 24px 0 rgba($color, $opacity),
+    0 6px 12px 0 rgba($color, $opacity),
+    0 4px 4px 0 rgba($color, $opacity),
+    0 2px 2px 0 rgba($color, $opacity);
+}
+
+@mixin euiBottomShadowLarge($color: $euiShadowColorLarge, $opacity: .2) {
+  box-shadow:
+    0 64px 64px 0 rgba($color, $opacity),
+    0 32px 32px 0 rgba($color, $opacity),
+    0 16px 16px 0 rgba($color, $opacity),
+    0 8px 8px 0 rgba($color, $opacity),
+    0 4px 4px 0 rgba($color, $opacity),
+    0 2px 2px 0 rgba($color, $opacity);
+}
+
+@mixin euiSlightShadowHover($color: $euiShadowColor, $opacity: .3) {
+  box-shadow:
+    0 4px 8px 0px rgba($color, $opacity/2),
+    0 2px 2px -1px rgba($color, $opacity);
+}
+
+@mixin euiSlightShadowActive($color: $euiShadowColor, $opacity: .3) {
+  @include euiSlightShadowHover($color, $opacity);
 }
 
 @mixin euiOverflowShadowTop {
