Set up sass functions folder, add new functions for color contrast (#628)
What this PR does:

1. Separates Sass functions into a new `/global_styling/functions/` folder so that they don't dirty up the rest of the files. These get imported along with `global_styling` genetically like our other mixins.
2. Adds new math and color functions:
    * A bunch of math functions for the single purpose of calculating luminosity is Sass
    * Using luminosity, we now have functions to `checkContrast`, `chooseLightOrDarkText` and `makeHighContrastColor`.

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -78,21 +78,24 @@ $buttonTypes: (
 // Create button modifiders based upon the map.
 @each $name, $color in $buttonTypes {
   .euiButton--#{$name} {
-    color: $color;
+
+    @if ($name == 'ghost') {
+      // Ghost is unique and ALWAYS sits against a dark background.
+      color: $color;
+    } @else {
+      // Other colors need to check their contrast against the page background color.
+      color: makeHighContrastColor($color, $euiColorEmptyShade);
+    }
+
     border-color: $color;
 
     &.euiButton--fill {
       background-color: $color;
       border-color: $color;
 
-      $textColor: #FFF;
-      @if ($name == 'ghost') {
-        $textColor: #000;
-      } @else if (lightness($euiTextColor) > 50) {
-        $textColor: $euiTextColor;
-      }
+      $fillTextColor: chooseLightOrDarkText($color, #FFF, #000);
 
-      color: $textColor;
+      color: $fillTextColor;
 
       &:enabled {
         &:hover, &:focus {
@@ -102,7 +105,7 @@ $buttonTypes: (
       }
 
       &:disabled .euiButton__spinner {
-        border-color: euiLoadingSpinnerBorderColors(transparentize($textColor, .3));
+        border-color: euiLoadingSpinnerBorderColors(transparentize($fillTextColor, .3));
       }
     }
 
