--- a/src/components/text/_text_color.scss
+++ b/src/components/text/_text_color.scss
@@ -12,11 +12,13 @@ $textColors: (
 // Create color modifiers based on the map
 @each $name, $color in $textColors {
   .euiTextColor.euiTextColor--#{$name} {
-    color: $color !important;
+
+    // The below function makes sure the color is accessible on our default background.
+    color: makeHighContrastColor($color, $euiColorEmptyShade) !important;
 
     // We need a blanket approach for coloring. It should overule everything.
     * {
-      color: $color !important;
+      color: makeHighContrastColor($color, $euiColorEmptyShade) !important;
     }
   }
 }
