--- a/src/themes/eui/eui_colors_dark.scss
+++ b/src/themes/eui/eui_colors_dark.scss
@@ -9,7 +9,7 @@ $euiColorDarkestShade: #F5F5F5;
 $euiColorFullShade: #FFF;
 $euiColorSlightHue: #494E51;
 $euiColorPrimary: #4da1c0;
-$euiColorWarning: #e45c29;
+$euiColorWarning: #c06c4c;
 $euiColorDanger: #bf4d4d;
 $euiTextColor: #DDD;
 
