--- a/src/global_styling/index.scss
+++ b/src/global_styling/index.scss
@@ -1,4 +1,13 @@
 // Core
+
+// Functions need to be first, since we use them in our variables and mixin definitions
+@import 'functions/index';
+
+// Variables come next, and are used in some mixins
 @import 'variables/index';
+
+// Mixins provide generic code expansion through helpers
 @import 'mixins/index';
+
+// The reset file makes use of variables and mixins
 @import 'reset/index';
