Add support for validation to EuiComboBox and fix some bugs (#631)
* Fix bug where clicking a pill's close button would close the list, by refining the focus and blur logic.
* Fix bug with positioning the list when there's no scrollbar, caused by the absolute position in the CSS.
* Fix bug with logic managing the euiBody-hasPortalContent class.
* Add support for validation to EuiComboBox.

--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -54,4 +54,10 @@
         inset 0 -2px 0 0 $euiColorPrimary;
     }
   }
+
+  &.euiComboBox-isInvalid {
+    .euiComboBox__inputWrap {
+      @include euiFormControlInvalidStyle;
+    }
+  }
 }
