More & better titling (#627)

--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -80,17 +80,6 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
   margin-left: 240px;
 }
 
-.guideSection__text.euiText,
-.guideSection__text .euiText {
-  @include euiFontSizeS;
-  //font-weight: $euiFontWeightLight;
-  color: shadeOrTint($euiTextColor, .3, .1);
-
-  p, ul, ol {
-    max-width: 36rem;
-  }
-}
-
 .guideDemo__highlightLayout {
   div {
     background: transparentize(#0096CC, .9);
@@ -119,6 +108,13 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
 .guideDemo__textLines {
   background-image: linear-gradient($euiFocusBackgroundColor 1px, transparent 1px) !important;
   background-size: 100% 8px !important;
+  background-position-y: 2px;
+}
+
+.guideDemo__textLines--s {
+  background-image: linear-gradient($euiFocusBackgroundColor 1px, transparent 1px) !important;
+  background-size: 100% 7px !important;
+  background-position-y: -2px;
 }
 
 .guideDemo__color {
