--- a/src-docs/src/components/guide_rule/_guide_rule_example.scss
+++ b/src-docs/src/components/guide_rule/_guide_rule_example.scss
@@ -15,8 +15,8 @@
   }
 
   .guideRule__caption {
-    @include euiFontSizeXS;
-    max-height: $euiFontSizeXS * $euiLineHeight; /* 1 */
+    @include euiFontSizeS;
+    max-height: $euiFontSizeS * $euiLineHeight; /* 1 */
     overflow-y: visible; /* 1 */
   }
 
