--- a/src/components/side_nav/_side_nav_item.scss
+++ b/src/components/side_nav/_side_nav_item.scss
@@ -94,8 +94,7 @@
     }
 
     .euiSideNavItemButton__label {
-      @include euiTitle;
-      font-size: $euiFontSizeM;
+      @include euiTitle("xs");
     }
   }
 
