--- a/src/global_styling/mixins/_typography.scss
+++ b/src/global_styling/mixins/_typography.scss
@@ -10,22 +10,43 @@
   font-family: $euiCodeFontFamily;
 }
 
-@mixin euiTitle {
-  color: $euiTitleColor;
-  font-weight: $euiFontWeightLight;
-}
-
 @mixin euiText {
   color: $euiTextColor;
   font-weight: $euiFontWeightRegular;
 }
 
-// Font sizing extends, using rem mixin
+@mixin euiTitle($size: "m") {
+  color: $euiTitleColor;
 
-@mixin euiFontSize {
-  @include fontSize($euiFontSize);
-  line-height: $euiLineHeight;
+  @if $size == "xxxs" {
+    @include euiFontSizeXS;
+    font-weight: $euiFontWeightBold;
+    @include lineHeightFromBaseline(3);
+  } @else if $size == "xxs" {
+    @include euiFontSizeS;
+    font-weight: $euiFontWeightBold;
+    @include lineHeightFromBaseline(3);
+  } @else if $size == "xs" {
+    @include euiFontSize;
+    font-weight: $euiFontWeightMedium;
+    @include lineHeightFromBaseline(3);
+  } @else if $size == "s" {
+    @include euiFontSizeL;
+    font-weight: $euiFontWeightMedium;
+    @include lineHeightFromBaseline(4);
+  } @else if $size == "m" {
+    @include euiFontSizeXL;
+    @include lineHeightFromBaseline(5);
+  } @else if $size == "l" {
+    @include euiFontSizeXXL;
+    @include lineHeightFromBaseline(6);
+  } @else {
+    @include fontSize($size);
+    @include lineHeightFromBaseline(3);
+  }
 }
+
+// Font sizing extends, using rem mixin
 
 @mixin euiFontSizeXS {
   @include fontSize($euiFontSizeXS);
@@ -54,10 +75,12 @@
 
 @mixin euiFontSizeXL {
   @include fontSize($euiFontSizeXL);
-  line-height: $euiLineHeight;
+  line-height: 1.25;
+  font-weight: $euiFontWeightLight; // always apply light weight to x-large type
 }
 
 @mixin euiFontSizeXXL {
   @include fontSize($euiFontSizeXXL);
-  line-height: $euiLineHeight;
+  line-height: 1.25;
+  font-weight: $euiFontWeightLight; // always apply light weight to x-large type
 }
