--- a/src/global_styling/variables/_typography.scss
+++ b/src/global_styling/variables/_typography.scss
@@ -16,21 +16,31 @@
   font-size: convertToRem($size);
 }
 
+// Our base gridline is at 1/2 the font-size, ensure line-heights stay on that gridline.
+// EX: A proper line-height for text is 1.5 times the font-size.
+//     If our base font size (euiFontSize) is 16, our baseline is 8 (16*1.5 / 3). To ensure the
+//     text stays on the baseline, we pass a multiplier to calculate a line-height in rems.
+@mixin lineHeightFromBaseline($multiplier: 3) {
+  line-height: convertToRem(($euiFontSize/2)*$multiplier);
+}
+
+
 // Families
 
 $euiFontFamily: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $euiCodeFontFamily: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace !default;
 
-// Font sizes
+// Font sizes -- scale is loosely based on Major Third (1.250)
+$euiTextScale:      2.25, 1.75, 1.25, 1.125, 1, .875, .75;
 
-$euiFontSize:       $euiSize !default;
+$euiFontSize:       $euiSize !default; // 5th position in scale
 
-$euiFontSizeXS:     $euiFontSize * .75 !default;
-$euiFontSizeS:      $euiFontSize * .875 !default;
-$euiFontSizeM:      $euiFontSize * 1.125 !default;
-$euiFontSizeL:      $euiFontSize * 1.5 !default;
-$euiFontSizeXL:     $euiFontSize * 2 !default;
-$euiFontSizeXXL:    $euiFontSize * 3 !default;
+$euiFontSizeXS:     $euiFontSize * nth($euiTextScale, 7) !default;
+$euiFontSizeS:      $euiFontSize * nth($euiTextScale, 6) !default;
+$euiFontSizeM:      $euiFontSize * nth($euiTextScale, 4) !default;
+$euiFontSizeL:      $euiFontSize * nth($euiTextScale, 3) !default;
+$euiFontSizeXL:     $euiFontSize * nth($euiTextScale, 2) !default;
+$euiFontSizeXXL:    $euiFontSize * nth($euiTextScale, 1) !default;
 
 // Line height
 
