--- a/src/themes/k6/k6_globals.scss
+++ b/src/themes/k6/k6_globals.scss
@@ -1,14 +1,16 @@
 // Font families
 $euiFontFamily: 'Open Sans', Helvetica, Arial, sans-serif;
 
-// Font Sizes
-$euiFontSize:       14px;
-$euiFontSizeXS:     12px;
-$euiFontSizeS:      14px;
-$euiFontSizeM:      16px;
-$euiFontSizeL:      18px;
-$euiFontSizeXL:     24px;
-$euiFontSizeXXL:    32px;
+$euiTextScale: 2.28571429, 1.71428571, 1.28571429, 1.14285714, 1, 1, 0.85714286;
+
+$euiFontSize:       14px; // 5th position in scale
+
+$euiFontSizeXS:     $euiFontSize * nth($euiTextScale, 7); // 12px
+$euiFontSizeS:      $euiFontSize * nth($euiTextScale, 6); // 14px
+$euiFontSizeM:      $euiFontSize * nth($euiTextScale, 4); // 16px
+$euiFontSizeL:      $euiFontSize * nth($euiTextScale, 3); // 18px
+$euiFontSizeXL:     $euiFontSize * nth($euiTextScale, 2); // 24px
+$euiFontSizeXXL:    $euiFontSize * nth($euiTextScale, 1); // 32px
 
 // Make titles bold.
 $euiFontWeightLight: 600;
