Gray out labels when disabled (#648)
* Gray out labels when disabled

* Updated changelog

--- a/src/components/form/_mixins.scss
+++ b/src/components/form/_mixins.scss
@@ -58,6 +58,11 @@
   cursor: not-allowed;
   background: darken($euiColorLightestShade, 2%);
   box-shadow: 0 0 0 1px transparentize($euiColorFullShade, .92);
+  color: $euiColorMediumShade;
+
+  &::placeholder {
+    color: $euiColorMediumShade;
+  }
 }
 
 /**
