--- a/src/components/form/file_picker/_file_picker.scss
+++ b/src/components/form/file_picker/_file_picker.scss
@@ -23,6 +23,9 @@
     &:hover:disabled {
       cursor: not-allowed;
     }
+    &:disabled ~ .euiFilePicker__prompt {
+      color: $euiColorMediumShade;
+    }
   }
 
   .euiFilePicker__icon {
