--- a/src/components/form/radio/_radio.scss
+++ b/src/components/form/radio/_radio.scss
@@ -32,7 +32,7 @@
       cursor: not-allowed !important;
 
       ~ .euiRadio__label {
-        color: $euiColorDarkShade;
+        color: $euiColorMediumShade;
         cursor: not-allowed !important;
       }
 
